# dali-gala

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.example  diagram.json  main.py  platformio.ini  pyproject.toml  wokwi.toml
components/dali/: CMakeLists.txt  DALICtl.cpp  DALICtl.h
components/dg_dali/: CMakeLists.txt  DALICtl.cpp  DALICtl.h  DALILib.cpp  DALILib.h  GalaDALICtl.cpp  GalaDALICtl.h
components/dg_server/: CMakeLists.txt  GalaWebServer.cpp  GalaWebServer.h  Kconfig.projbuild  WebServer.cpp  WebServer.h  idf_component.yml
components/dg_status/: CMakeLists.txt  GalaStatus.cpp  GalaStatus.h  Kconfig.projbuild  idf_component.yml
components/dg_webapp/: .gitignore  CMakeLists.txt  GalaWebApp.cpp  GalaWebApp.h  WebApp.cpp  WebApp.h
components/dg_webapp/flash_data/: app.html
components/dg_webapp/gala-app/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
components/dg_webapp/gala-app/src/lib/gala/: index.ts
components/dg_webapp/gala-app/src/params/: dev.ts
components/dg_webapp/gala-app/src/routes/: +page.svelte  +page.ts
components/dg_webapp/gala-app/src/routes/[api=dev]/v1/devices/: +server.ts
components/dg_webapp/gala-app/src/routes/[api=dev]/v1/devices/[address]/: +server.ts
components/dg_webapp/gala-app/src/routes/api/v1/devices/: +server.ts
components/dg_wifi/: CMakeLists.txt  GalaWiFi.cpp  GalaWiFi.h  Kconfig.projbuild  WiFiAccessPoint.cpp  WiFiAccessPoint.h  idf_component.yml
components/web/: CMakeLists.txt  build_app.cmake  idf_component.yml  webapp.c  webapp.cpp  webapp.h
components/web/flash_data/: app.html
components/web/gala-app/: package.json  pnpm-lock.yaml  svelte.config.js
components/web/gala-app/src/lib/gala/: index.ts
components/web/gala-app/src/routes/: +page.svelte
main/: CMakeLists.txt  DALI_Lib.cpp  DALI_Lib.h  Kconfig.projbuild  WS_DALI.cpp  WS_DALI.h  WS_WIFI.cpp  WS_WIFI.h  WiFiAccessPoint.cpp  WiFiAccessPoint.h  app.html  generate_html_header.cmake  idf_component.yml  main.cpp
src/: main.cpp  test_basic.cpp
